--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="PayNomad Capital offers global financial solutions for businesses and HNWIs, with seamless cross-border payments, multi-currency accounts, and compliance expertise."
+    />
+    <title>PayNomad Capital | Global Financial Solutions</title>
   </head>
   <body>
     <div id="root"></div>
